# AI-Streamer

./: .gitignore  CMakeLists.txt  README.md
include/: RtspPusher.h  SafeQueue.h
src/: RtspPusher.cpp  ai_camera.cpp
